; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/netfilter/extr_ebt_pkttype.c_ebt_pkttype_mt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/netfilter/extr_ebt_pkttype.c_ebt_pkttype_mt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i64 }
%struct.xt_match_param = type { %struct.ebt_pkttype_info* }
%struct.ebt_pkttype_info = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.xt_match_param*)* @ebt_pkttype_mt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ebt_pkttype_mt(%struct.sk_buff* %0, %struct.xt_match_param* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.xt_match_param*, align 8
  %5 = alloca %struct.ebt_pkttype_info*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.xt_match_param* %1, %struct.xt_match_param** %4, align 8
  %6 = load %struct.xt_match_param*, %struct.xt_match_param** %4, align 8
  %7 = getelementptr inbounds %struct.xt_match_param, %struct.xt_match_param* %6, i32 0, i32 0
  %8 = load %struct.ebt_pkttype_info*, %struct.ebt_pkttype_info** %7, align 8
  store %struct.ebt_pkttype_info* %8, %struct.ebt_pkttype_info** %5, align 8
  %9 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %10 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.ebt_pkttype_info*, %struct.ebt_pkttype_info** %5, align 8
  %13 = getelementptr inbounds %struct.ebt_pkttype_info, %struct.ebt_pkttype_info* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp eq i64 %11, %14
  %16 = zext i1 %15 to i32
  %17 = load %struct.ebt_pkttype_info*, %struct.ebt_pkttype_info** %5, align 8
  %18 = getelementptr inbounds %struct.ebt_pkttype_info, %struct.ebt_pkttype_info* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = xor i32 %16, %19
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
